# LibTemperature

./: CMakeLists.txt  README.md  libTemp  libTemp.cpp  libTemp.h  main.cpp
